--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "dependencies": {
-    "express": "^4.21.0",
-    "mongoose": "^8.7.0",
-    "nodemailer": "^6.9.15",
-    "warn": "^1.0.1"
-  },
-  "name": "alpha-kids-2.0",
+  "name": "node_backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1",
+    "mongoose": "^8.7.1"
+  }
 }
